--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,9 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+.background-gradient{
+    background-image: linear-gradient(90deg, #2937f0, #9f1ae2);
+}
+.navigation{
+    height: 80px;
+}
