--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,15 @@ body{
 .background-gradient{
     background-image: linear-gradient(90deg, #2937f0, #9f1ae2);
 }
+.text-blue{
+    color:#2937f0;
+}
+.text-navy{
+    color:#9f1ae2;
+}
 .navigation{
     height: 80px;
+}
+.banner{
+    height: calc(100vh - 80px);
 }
