--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body{
 .background-gradient{
     background-image: linear-gradient(90deg, #2937f0, #9f1ae2);
 }
+/* ---------------------banner start------------- */
 .text-blue{
     color:#2937f0;
 }
@@ -18,3 +19,5 @@ body{
 .banner{
     height: calc(100vh - 80px);
 }
+
+/*-------------------- nessted work-------------- */
