--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,11 @@ body{
 .new-web-design{
     height: 100vh;
 }
+/* ------------stop writing --------- */
+.stop-waiting{
+    background-image: url(../img/background.png);
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
